# BatchLabelCrop

./: CMakeLists.txt  ImageItem.cpp  ImageItem.h  ImageProcessing.cpp  ImageProcessing.h  ImageProcessing.qrc  ImageProcessing.ui  ImageScene.cpp  ImageScene.h  ImageView.cpp  ImageView.h  ImageWithProjection.cpp  ImageWithProjection.h  README.md  main.cpp
